Revert "Code clean-up (#65)"
This reverts commit d24fcfb5147af8b389c84032f4640d1f1873640c.